temporary fix for coref visualisation wrapping

--- a/demo/public/css/main.css
+++ b/demo/public/css/main.css
@@ -1521,6 +1521,11 @@ svg {
   color: #1c2f3a;
 }
 
+.coref__span {
+  background-color: #40affd;
+  color: #fff;
+}
+
 .hierplane__visualization-verbs {
   background: #f9fafc;
   padding: 1em 1.25em;
